WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147220
Layer z-ordering is incorrect when scrolling on page witih position:fixed
https://bugs.webkit.org/show_bug.cgi?id=147220
Summary
Layer z-ordering is incorrect when scrolling on page witih position:fixed
Simon Fraser (smfr)
Reported
2015-07-22 20:26:06 PDT
Layer z-ordering is incorrect when scrolling on page witih position:fixed
Attachments
Patch
(237.75 KB, patch)
2015-07-22 20:33 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-mavericks
(697.72 KB, application/zip)
2015-07-22 20:52 PDT
,
Build Bot
no flags
Details
Patch
(238.17 KB, patch)
2015-07-23 12:05 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-07-22 20:33:40 PDT
Created
attachment 257333
[details]
Patch
Build Bot
Comment 2
2015-07-22 20:52:38 PDT
Comment on
attachment 257333
[details]
Patch
Attachment 257333
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6634065276960768
New failing tests: compositing/layer-creation/fixed-overlap-extent-rtl.html compositing/layer-creation/fixed-overlap-extent.html
Build Bot
Comment 3
2015-07-22 20:52:40 PDT
Created
attachment 257335
[details]
Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Simon Fraser (smfr)
Comment 4
2015-07-23 12:05:47 PDT
Created
attachment 257360
[details]
Patch
Simon Fraser (smfr)
Comment 5
2015-07-23 16:45:20 PDT
https://trac.webkit.org/r187271
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug