Layer z-ordering is incorrect when scrolling on page witih position:fixed https://bugs.webkit.org/show_bug.cgi?id=147220 rdar://problem/15849697&21929247

Reviewed by Dean Jackson.

Source/WebCore:

Overlap testing for compositing uses the currently laid out position of fixed
elements, without taking into account the fact that async scrolling can move
them around, and possibly under other non-composited elements. This manifested
as position:fixed elements moving over other elements on some pages when
scrolling, when they should have moved behind.

Fix by expanding the overlap map entry for position:fixed elements to create
an rect for the area they cover at all scroll locations, taking min and max
scroll offsets into account.

Also add a couple more LOG(Compositing) statements.

Tests: compositing/layer-creation/fixed-overlap-extent-rtl.html
       compositing/layer-creation/fixed-overlap-extent.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::fixedPositionOffset):
(WebCore::RenderLayerCompositor::computeExtent):
(WebCore::RenderLayerCompositor::needsFixedRootBackgroundLayer):
(WebCore::RenderLayerCompositor::rootBackgroundTransparencyChanged):

LayoutTests:

Tests that reveal the overlap area by creating lots of small layers, and dumping
the layer tree.

* compositing/layer-creation/fixed-overlap-extent-expected.txt: Added.
* compositing/layer-creation/fixed-overlap-extent-rtl-expected.txt: Added.
* compositing/layer-creation/fixed-overlap-extent-rtl.html: Added.
* compositing/layer-creation/fixed-overlap-extent.html: Added.

Canonical link: https://commits.webkit.org/165323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187271 268f45cc-cd09-0410-ab3c-d52691b4dbfc